--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/28963/modernizr.custom.64310.js"></script>
+    <script src="eveAnim.js"></script> -->
+
 </body>
 
 </html>
