--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Credenz'21 Website" />
+    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -24,6 +25,10 @@
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/28963/modernizr.custom.64310.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="bower_components/aos/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="eveAnim.js"></script>
 
 </body>
