--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,9 @@
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/28963/modernizr.custom.64310.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="bower_components/aos/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <script src="eveAnim.js"></script>
+    <!-- <script src="bower_components/aos/dist/aos.js"></script> -->
+
+    <script src="%PUBLIC_URL%/eveAnim.js"></script>
 
 </body>
 
