--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="modal-root"></div>
     <div id="root">
-        <img src="img/Loader.gif" style="width:300px;height:300px;position:absolute;top:50%;left:50%;transform: translate(-50%,-50%);"  alt="loading.."></img>
+        <img src="img/loader4.gif" style="width:300px;height:200px;position:absolute;top:50%;left:50%;transform: translate(-50%,-50%);"  alt="loading.."></img>
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
