feedback touch up and web team back button

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Credenz'21 Website" />
-    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+    <!-- <link rel="stylesheet" href="bower_components/aos/dist/aos.css" type="text/css" /> -->
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
