--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logos/credenz19Logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logos/live30.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Credenz'21 Website" />
@@ -11,7 +11,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Credenz'21</title>
+    <title>CREDENZ LIVE</title>
     <style>
         * {
             margin: 0;
