--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         }
         
         body {
-            background-color: black;
+            background-color: black !important;
             text-align: center;
             color: white;
         }
@@ -73,7 +73,7 @@
     </style>
 </head>
 
-<body style="background-color: black">
+<body style="background-color: black !important">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="modal-root"></div>
     <div id="root">
